@@ -780,7 +780,7 @@ int cls2xml(CMPIConstClass * cls, UtilStringBuffer * sb, unsigned int flags)
       if (flags & FL_includeQualifiers) quals2xml(quals << 8, qsb);
       if (flags & FL_includeQualifiers)
          for (q = 0, qm = ClClassGetPropQualifierCount(cl, i); q < qm; q++) {
-	   qdata = cls->ft->getPropQualifierAt(cls, (char*)(unsigned long)i, q, &qname, NULL);
+	   qdata = internalGetPropQualAt(cls, i, q, &qname, NULL);
             data2xml(&qdata,cls,qname,"<QUALIFIER NAME=\"","</QUALIFIER>\n",qsb,NULL,0,0);
             CMRelease(qname);
 	    sfcb_native_release_CMPIValue(qdata.type,&qdata.value);
